--- a/HelloWorldTests/HelloWorldTests.csproj
+++ b/HelloWorldTests/HelloWorldTests.csproj
@@ -56,6 +56,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="FakeDateTime.cs" />
+    <Compile Include="FakeName.cs" />
     <Compile Include="MessageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
